# advent_of_code

./: advent_of_code.code-workspace
2022/day1/src/: main.rs
2022/day2/src/: main.rs
2022/day3/src/: main.rs
2022/day4/src/: main.rs
gleam/: flake.nix
gleam/year_2020/: README.md  gleam.toml
julia/: flake.nix
julia/AdventOfCode/: Manifest.toml  Project.toml
pyspark/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  flake.nix
python/: .gitignore
python/year2024/: __main__.py  pyproject.toml
python/year2024/day1/: main.py
python/year2024/tests/: test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day2.py  test_day20.py  test_day21.py  test_day22.py  test_day23.py  test_day24.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
python/year2024/year2024/: __main__.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
python/year2024/year2024/utils/: aoc.py  matrix.py
roc/package/: HeapQueue.roc  Matrix.roc  Point2D.roc  main.roc
rust/: Cargo.toml  flake.nix  results.txt
rust/runner/: Cargo.toml
rust/runner/src/: main.rs
rust/year2020/: Cargo.toml
rust/year2022/: Cargo.toml
rust/year2023/: Cargo.toml
rust/year2023/src/: lib.rs
rust/year2024/: Cargo.toml
rust/year2025/: Cargo.toml
(+99 files in other folders)
