[tool.poetry]
name = "year2024"
version = "0.1.0"
description = ""
authors = ["António Capela <acapela96@hotmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
year2024 = 'year2024:main'

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.14.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
mypy = "^1.13.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
