[project]
name = "year2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "flameprof>=0.4",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]
