[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
year2020 = { path = "../year2020"}
year2022 = { path = "../year2022"}
year2023 = { path = "../year2023"}
year2024 = { path = "../year2024"}
